--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,6 @@
       "**/CVS": true
    },
    "files.autoSave": "off",
-   "workbench.colorTheme": "Visual Studio Dark",
+   "workbench.colorTheme": "Material Theme Palenight High Contrast",
    "terminal.integrated.gpuAcceleration": "canvas",
 }
