--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj3-cloudinary-storage==0.0.6
 Django==4.2.16
 django-allauth==0.57.2
 django-crispy-forms==2.3
+django-heroku==0.3.1
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 oauthlib==3.2.2
